WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
135925
[CSS Shapes] Positioned polygon reftests failing
https://bugs.webkit.org/show_bug.cgi?id=135925
Summary
[CSS Shapes] Positioned polygon reftests failing
Rebecca Hauck
Reported
2014-08-13 19:16:15 PDT
The following tests in imported from the W3C CSS Shapes test suite are failing with ref mismatches. It appears it may be line height issues, but more investigation is needed. LayoutTests/css3/shapes/shape-outside/supported-shapes/polygon/shape-outside-polygon-012.html LayoutTests/css3/shapes/shape-outside/supported-shapes/polygon/shape-outside-polygon-013.html LayoutTests/css3/shapes/shape-outside/supported-shapes/polygon/shape-outside-polygon-014.html LayoutTests/css3/shapes/shape-outside/supported-shapes/polygon/shape-outside-polygon-015.html If it turns out this is just an issue with the tests, they need to be updated in the W3C test repo then re-imported.
Attachments
Patch
(5.54 KB, patch)
2014-08-25 09:20 PDT
,
Zoltan Horvath
no flags
Details
Formatted Diff
Diff
Patch
(5.60 KB, patch)
2014-08-25 09:27 PDT
,
Zoltan Horvath
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Zoltan Horvath
Comment 1
2014-08-25 09:20:10 PDT
Created
attachment 237089
[details]
Patch
Zoltan Horvath
Comment 2
2014-08-25 09:27:31 PDT
Created
attachment 237090
[details]
Patch
Dave Hyatt
Comment 3
2014-08-26 12:04:25 PDT
Comment on
attachment 237090
[details]
Patch r=me
WebKit Commit Bot
Comment 4
2014-08-26 13:13:14 PDT
Comment on
attachment 237090
[details]
Patch Clearing flags on attachment: 237090 Committed
r172973
: <
http://trac.webkit.org/changeset/172973
>
WebKit Commit Bot
Comment 5
2014-08-26 13:13:18 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug