[CSS Shapes] Positioned polygon reftests failing https://bugs.webkit.org/show_bug.cgi?id=135925

Reviewed by David Hyatt.

Source/WebCore:

We didn't respect the shape-margin before a positioned polygon, since we checked
the shape-margin for only 1 vertex for a polygon edge. This patch fixes the behavior,
removes the tests from the skipped list and updates 1 test, which was incorrect.

Updated existing test and removed tests from skipped list.

* rendering/shapes/PolygonShape.cpp:
(WebCore::clippedCircleXRange):
(WebCore::PolygonShape::getExcludedInterval):

LayoutTests:

* TestExpectations: Remove passing tests.
* css3/shapes/shape-outside/supported-shapes/polygon/shape-outside-polygon-012.html: Fix test behavior.


Canonical link: https://commits.webkit.org/154086@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@172973 268f45cc-cd09-0410-ab3c-d52691b4dbfc